# zmq-example

./: .gitignore  README.md
cpp/: CMakeLists.txt  main.cpp
open-face-extractor/: CMakeLists.txt  OwnExtractor  OwnExtractor.cpp
py/: image.txt  main.py
